--- a/src/index.css
+++ b/src/index.css
@@ -298,11 +298,13 @@
 }
 
 .team-img {
-  width: 100%;
+  width: 80%;
   height: 420px;
   object-fit: cover;
   filter: grayscale(100%);
   transition: all 0.5s ease;
+  justify-content: center;
+  align-items: center;
 }
 
 .team-strip:hover .team-img {
